--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "@syncfusion/ej2-vue-buttons": "^19.4.42",
-    "@syncfusion/ej2-vue-diagrams": "^19.4.42",
-    "@syncfusion/ej2-vue-grids": "^19.4.42",
+    "@syncfusion/ej2-base": "^19.4.42",
+    "@syncfusion/ej2-vue-buttons": "^19.2.46",
+    "@syncfusion/ej2-vue-diagrams": "^19.2.46",
+    "@syncfusion/ej2-vue-grids": "^19.2.46",
+    "@syncfusion/ej2-vue-inputs": "^19.2.46",
+    "@syncfusion/ej2-vue-navigations": "^19.2.46",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
